# programmingAdvices

./: CMakeLists.txt  atmSystem.h  authenticatedUsers.txt  bank_file.txt  bank_library.h  clientsFile.txt  clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsBankScreen.h  clsBankUser.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsCurrencyScreen.h  clsDate.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindCurrencyScreen.h  clsFindUserScreen.h  clsInputValidate.h  clsListAllUsersScreen.h  clsListCurrenciesScreen.h  clsLog.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainMenuScreen.h  clsManageUsersScreen.h  clsPeriod.h  clsPerson.h  clsShowAllClientsScreen.h  clsString.h  clsTotalbalancesScreen.h  clsTransactionMenuScreen.h  clsTransferScreen.h  clsTransfereLogScreen.h  clsUpdateClientScreen.h  clsUpdateCurrencyRateScreen.h  (+18 more)
PizzaProject/: Form1.Designer.cs  Form1.cs  PizzaProject.sln  Program.cs
calculator/: Program.cs
comboBox/: Form1.Designer.cs  Form1.cs  comboBox.csproj  comboBox.sln
comboBox/Properties/: AssemblyInfo.cs  Resources.Designer.cs
dataStructure/: clsDbLindedList.h  clsMyDynamicArray.h  clsMyQueue.h  clsMyQueueArr.h  clsMyStack.h  clsMyStackArr.h  clsMyString.h  clsMysMyQueue.h  clsQueueLine.h
tictactoe/: Form1.Designer.cs  Form1.cs  Form1.resx  tictactoe.csproj  tictactoe.sln
tictactoe/Properties/: AssemblyInfo.cs  Resources.Designer.cs
